Mon Jun 18 07:50:56 BST 2007  Colin Watson  <cjwatson@debian.org>

	* libdb/db_btree.c (btree_close, btree_flopen, btree_replace,
	  btree_insert, btree_fetch, btree_exists, btree_findkey,
	  btree_firstkey, btree_nextkey, btree_nextkeydata): Rename dbf to
	  db to avoid shadowing a global variable.
	* libdb/mydbm.h: Update prototypes and btree macros likewise.

Sat May 26 10:58:11 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (gripe_no_name): On reflection, borrowing the error
	  message from gripe_no_man is clearer if a possible section name
	  was specified.
	* po/man-db.pot, po/*.po: Update.

Sat May 26 10:53:58 BST 2007  Colin Watson  <cjwatson@debian.org>

	* po/man-db.pot: Add to revision control.

Sat May 26 10:52:01 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (gripe_no_name): Resolve ambiguous error message when
	  asking for a nonexistent manual page that might also be a section
	  name (Debian bug #421481).
	* po/*.po: Update.

Sat May 26 10:46:56 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (gripe_no_name): Complete renaming of section to sect.

Fri May 25 21:23:05 BST 2007  Colin Watson  <cjwatson@debian.org>

	Add (untested) zh_HK support. Thanks to Alex Lau for advice.

	* src/encodings.c (directory_table): Add zh_HK, defaulting to the
	  BIG5-HKSCS encoding.
	  (charset_table): Add BIG5-HKSCS, defaulting to the nippon driver.
	  (compatible_encodings): Recognise BIG5-HKSCS encoding.
	  (get_roff_encoding): Add special case for zh_HK.UTF-8 locale.

Wed Apr 11 04:37:35 BST 2007  Colin Watson  <cjwatson@debian.org>

	Add MANPAGER support. Thanks to Faidon Liambotis for the suggestion.

	* src/man.c (main): Support MANPAGER, overriding PAGER.
	* man/man1/man.man1 (OPTIONS, ENVIRONMENT): Document MANPAGER.
	* docs/NEWS: Document this.

Thu Apr  5 18:00:00 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Break whatis definitions at .IP, .HP, .RS, and .RE