@@ -1,3 +1,7 @@
+Mon Jun 18 08:03:30 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* lib/xstrsignal.c: Include config.h.
+
 Mon Jun 18 07:50:56 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* libdb/db_btree.c (btree_close, btree_flopen, btree_replace,
